Basic setup and Logo export

--- a/app/src/main/res/layout/activity_curiosity.xml
+++ b/app/src/main/res/layout/activity_curiosity.xml
@@ -5,5 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:screenOrientation="landscape"
-    tools:context=".MainActivity"/>
+    tools:context=".CuriosityActivity">
+
+</androidx.constraintlayout.widget.ConstraintLayout>
